format update, footer added

--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
             <span class="caret"></span>
           </button>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-            <li><a href="#bio">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><a href="#bio">Bio</a></li>
+            <li><a href="#">Mission</a></li>
+            <li><a href="#">Photo</a></li>
+            <li><a href="#">Video</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="#">Separated link</a></li>
           </ul>
