--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Steeve Sam</title>
 
+    <!--plyr!-->
+    <link rel="stylesheet" href="https://cdn.plyr.io/1.5.9/plyr.css">
+
+
     <!-- Bootstrap -->
     <link href="bs/css/bootstrap.min.css" rel="stylesheet">
     <link href="ssam.css" rel="stylesheet">
@@ -14,6 +18,8 @@
 
     <link href='https://fonts.googleapis.com/css?family=Economica' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Marvel' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -21,44 +27,158 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script>
+(function(d, p){
+    var a = new XMLHttpRequest(),
+        b = d.body;
+    a.open('GET', p, true);
+    a.send();
+    a.onload = function() {
+        var c = d.createElement('div');
+        c.setAttribute('hidden', '');
+        c.innerHTML = a.responseText;
+        b.insertBefore(c, b.childNodes[0]);
+    };
+})(document, 'path/to/sprite.svg');
+</script>
+
+    <script src="https://cdn.plyr.io/1.5.9/plyr.js"></script>
 
     <script src="jquery-1.12.0.min.js"></script>
+
   </head>
   <body>
-    <h1 class="headline">STEEVE SAM</h1>
+    <nav class="navbar navbar-default navbar-fixed-top" style="border-bottom: 0px #000 !important;">
+      <div class="container" style="margin-left: 0px;">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" id="namess" href="#">STEEVE SAM</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="#bio">About</a></li>
+            <li><a href="#mission">Mission</a></li>
+            <li><a href="#music">Sights and Sounds</a></li>
+<!--             <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="#bio">About</a></li>
+                <li><a href="#mission">Mission</a></li>
+                <li><a href="#music">Sights and Sounds</a></li>
+                <li role="separator" class="divider"></li>
+                <li class="dropdown-header">Nav header</li>
+                <li><a href="#">Separated link</a></li>
+                <li><a href="#">One more separated link</a></li>
+              </ul>
+            </li>
+          </ul> -->
+<!--           <ul class="nav navbar-nav navbar-right">
+            <li><a href="../navbar/">Default</a></li>
+            <li><a href="../navbar-static-top/">Static top</a></li>
+            <li class="active"><a href="./">Fixed top <span class="sr-only">(current)</span></a></li>
+          </ul> -->
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
 
-    <div class="dropdown">
+<!--     <div class="dropdown">
           <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
             <span class="caret"></span>
           </button>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-            <li><a href="#bio">Bio</a></li>
-            <li><a href="#">Mission</a></li>
-            <li><a href="#">Photo</a></li>
-            <li><a href="#">Video</a></li>
+            <li><a href="#bio">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="#">Separated link</a></li>
           </ul>
+    </div> -->
 
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-6">
+      <div class="container-fluid">
+
+        <!-- <div class="row" id="player"> -->
+<!--           <div class="col-xs-6 col-sm-4" id=""><iframe width="100%" height="125" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/242486199&amp;color=00cc11&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+          </div>
+        </div> -->
+          <!-- <div class="col-xs-12 col-sm-8"> -->
+            <div class="plyr">
+              <audio controls>
+                <!-- Audio files -->
+                <source src="ageagain2.mp3" type="audio/mpeg">
+                <source src="ageagain2.ogg" type="audio/ogg">
+
+                <!-- Fallback for browsers that don't support the <audio> element -->
+               <!--  <a href="/path/to/audio.mp3">Download</a> -->
+            </audio>
+          </div>
+
+          <div class="vplyr">
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/mlvray4u4qo" frameborder="0" allowfullscreen></iframe>
+          </div>
+        <!-- </div> -->
+
+        <div class="row" id="bio">
+          <div class="col-xs-12 col-sm-8" id="bio2"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
         </div>
 
+        <div class="row" id="mission">
+          <div class="col-xs-12 col-sm-8" id="mission2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </div>
         </div>
-        <div class="col-md-6">
+
+        <div class="row" id="music">
+          <div class="col-xs-12 col-sm-8" id="music2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </div>
         </div>
-        <div class="col-md-6" id="bio">Test
-        </div>
+
 
       </div>
-
+      
     </div>
+
+    <div class="navbar navbar-inverse navbar-fixed-bottom" role="navigation" style=" margin-top: 0px; margin-left: 0px; margin-right: 0px; margin-bottom: 0px;">
+      <!-- <div class="container2"> -->
+        <div class="navbar-text pull-left" id="footerbottom">
+          <a href="www.soundcloud.com"><img src="scloud.png" style="width: 50px; height: 50px;"></a>
+          <a href="www.twitter.com"><img src="twitter.png" style="width: 50px; height: 50px;"></a>
+          <a href="www.instagram.com"><img src="insta.png" style="width: 50px; height: 50px;"></a>
+        </div>
+      <!-- </div> -->
+    </div>
+
+<!--         <footer>
+          <div><a href="soundcloud.com"><img src="scloud.png" width="100" height="100"></a></div>
+        </footer> -->
+    <script src="https://cdn.plyr.io/1.5.9/plyr.js"></script>
+    <script>plyr.setup(document.querySelector('.js-plyr'), options);</script>
+
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <!--     // <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> -->
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="bs/js/bootstrap.min.js"></script>
+
   </body>
 </html>
